--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,11 +1,16 @@
-<div>
-    <span>{{currentWeather.city}}, {{currentWeather.country}} </span>
-    <span>{{currentWeather.date | date: 'fullDate'}}</span>
+<div *ngIf="!currentWeather">
+    {{nullGuardMessage}}
 </div>
-<div>
-    <img [src]="currentWeather.image" />
-    <span>{{currentWeather.temperature | number: '1.0-0'}} &#8451;</span>
-</div>
-<div>
-    <span>{{currentWeather.description}}</span>
+<div *ngIf="currentWeather">
+    <div>
+        <span>{{currentWeather.city}}, {{currentWeather?.country}} </span>
+        <span>{{currentWeather.date | date: 'fullDate'}}</span>
+    </div>
+    <div>
+        <img [src]="currentWeather.image" />
+        <span>{{currentWeather.temperature | number: '1.0-0'}} &#8451;</span>
+    </div>
+    <div>
+        <span>{{currentWeather.description}}</span>
+    </div>
 </div>
